# BookStrore

./: .gitignore  README.md  docker-compose.yml  json_note_arch.txt  pyproject.toml  requirements.txt  trying.sh
backend/: Dockerfile  entrypoint.sh  requirements.txt
backend/apps/authentication/: admin.py  models.py  urls.py
backend/apps/ordering/: models.py
backend/apps/store/: admin.py  models.py  urls.py
backend/config/: urls.py
backend/config/settings/: common.py  dev.py
bookconfig/: manage.py
bookconfig/bookconfig/: asgi.py  urls.py  wsgi.py
bookconfig/bookconfig/settings/: common.py  dev.py  prod.py
kyobo/apps/authentication/: admin.py  apis.py  models.py  serializer.py  urls.py
kyobo/apps/store/: admin.py  apis.py  models.py  serializer.py  urls.py
kyobo/config/: urls.py
kyobo/config/settings/: common.py  dev.py  prob.py
nginx/: nginx-setup.conf
