[tool.poetry]
name = "bookstrore"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
django-countries = "^7.5.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
mypy = "^1.4.1"
django-storages = "^1.13.2"
django-filter = "^23.2"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
